po: update po/sv_SE/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/campaign.po
+++ b/po/sv_SE/campaign.po
@@ -3,14 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Jonathan S <jonathan.c.strom@gmail.com>, 2016
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015-2016
 # Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-15 16:05+0000\n"
-"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
+"PO-Revision-Date: 2016-04-11 09:17+0000\n"
+"Last-Translator: Jonathan S <jonathan.c.strom@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -126,7 +127,7 @@ msgstr "Mål med kampanjen"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Goal Revenue"
-msgstr ""
+msgstr "Målinkomst"
 
 #: CRM/Campaign/DAO/Survey.php CRM/Campaign/Form/Survey/Results.php
 #: templates/CRM/Campaign/Form/ResultOptions.tpl
@@ -174,7 +175,7 @@ msgstr "- välj förälder -"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Revenue Goal"
-msgstr ""
+msgstr "Inkomstmål"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Campaign has been deleted."
@@ -307,7 +308,7 @@ msgstr "Enkäten '%1' har tagits bort."
 
 #: CRM/Campaign/Form/Survey/Delete.php
 msgid "Delete action is missing expected survey ID."
-msgstr ""
+msgstr "Borttagningshandling saknar förväntad undersöknings-ID."
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Configure Survey"
@@ -362,27 +363,27 @@ msgstr "Frågor"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Create new result set"
-msgstr ""
+msgstr "Skapa nytt sökresultat"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Create a new result set"
-msgstr ""
+msgstr "Skapa ett nytt sökresultat"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Use existing result set"
-msgstr ""
+msgstr "Använd existerande sökresultat"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Select Result Set"
-msgstr ""
+msgstr "Välj Sökresultat"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Enter at least one result option."
-msgstr ""
+msgstr "Skriv in minst ett sökalternativ."
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Please select a Survey Result Set."
-msgstr ""
+msgstr "Välj ett undersökningsresultat."
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "A Survey Detail Report <a href='%1'>%2</a> has been created."
@@ -1036,7 +1037,7 @@ msgstr "Maximalt antalet kontakter"
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
 msgid "Default Number Of Contacts"
-msgstr ""
+msgstr "Standardval av kontakter"
 
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
@@ -1069,7 +1070,7 @@ msgstr "Undersökningen är aktiv"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Is Default Survey"
-msgstr ""
+msgstr "Är standardundersökning"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Created By"
@@ -1081,7 +1082,7 @@ msgstr "Undersökningen ändrades"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified On"
-msgstr ""
+msgstr "Undersökning ändrad"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "No Email Verification"
