--- a/po/sv_SE/grant.po
+++ b/po/sv_SE/grant.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Jonathan S <jonathan.c.strom@gmail.com>, 2016
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Stefan Gagner <stefan@mei-ya.se>, 2013
@@ -11,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-19 12:21+0000\n"
-"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"PO-Revision-Date: 2016-04-11 08:04+0000\n"
+"Last-Translator: Jonathan S <jonathan.c.strom@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -333,7 +334,7 @@ msgstr[1] "%count anslag borttagna."
 
 #: CRM/Grant/Info.php
 msgid "access CiviGrant"
-msgstr ""
+msgstr "till CiviGrant"
 
 #: CRM/Grant/Info.php
 msgid "View all grants"
@@ -357,8 +358,8 @@ msgstr "Radera godkännanden"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Status(s)"
-msgstr ""
+msgstr "Godkänn status(ar)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Type(s)"
-msgstr ""
+msgstr "Godkänn typ(er)"
