--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -7,6 +7,7 @@
 # Isak Bergdahl <jahve@rocketmail.com>, 2013
 # Isak Bergdahl <jahve@rocketmail.com>, 2013
 # Isak Bergdahl <jahve@rocketmail.com>, 2012
+# Jonathan S <jonathan.c.strom@gmail.com>, 2016
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # bumby <martin@gnutiken.se>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-04 08:23+0000\n"
-"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"PO-Revision-Date: 2016-04-11 08:12+0000\n"
+"Last-Translator: Jonathan S <jonathan.c.strom@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2064,7 +2065,7 @@ msgstr "Ny betalning"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Soft Credit Types"
-msgstr ""
+msgstr "Automatiska Kreditalternativ"
 
 msgctxt "menu"
 msgid "View Payment"
@@ -2105,7 +2106,7 @@ msgstr "Utvecklardokument"
 
 msgctxt "menu"
 msgid "File on Case"
-msgstr ""
+msgstr "Lägg till på ärende"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2193,4 +2194,4 @@ msgstr "Gå med"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides information about the status of recurring contributions"
-msgstr ""
+msgstr "Ger information om status för återkommande bidrag"
