--- a/po/da_DK/provinces.po
+++ b/po/da_DK/provinces.po
@@ -6,7 +6,7 @@
 # Aputsiaq Janussen <aj@isit.gl>, 2012
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
 # Aputsiaq Niels Janussen <aj@isit.gl>, 2012
-# Aputsiaĸ Niels Janussen <aj@isit.gl>, 2013-2015
+# Aputsiaĸ Niels Janussen <aj@isit.gl>, 2013-2016
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tine <tinethorup@gmail.com>, 2012
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-04-12 17:30+0000\n"
+"Last-Translator: Aputsiaĸ Niels Janussen <aj@isit.gl>\n"
 "Language-Team: Danish (http://www.transifex.com/civicrm/civicrm/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15857,15 +15857,15 @@ msgstr "Vodice"
 
 msgctxt "province"
 msgid "Abkhazia"
-msgstr ""
+msgstr "Abkhasien"
 
 msgctxt "province"
 msgid "Adjara"
-msgstr ""
+msgstr "Adsjarien"
 
 msgctxt "province"
 msgid "Tbilisi"
-msgstr ""
+msgstr "Tbilisi"
 
 msgctxt "province"
 msgid "Guria"
