po: update po/da_DK/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/da_DK/event.po
+++ b/po/da_DK/event.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
-# Aputsiaĸ Niels Janussen <aj@isit.gl>, 2013-2015
+# Aputsiaĸ Niels Janussen <aj@isit.gl>, 2013-2016
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
 # thoudahl <christian@thoudahl.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-04-12 17:35+0000\n"
+"Last-Translator: Aputsiaĸ Niels Janussen <aj@isit.gl>\n"
 "Language-Team: Danish (http://www.transifex.com/civicrm/civicrm/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1675,7 +1675,7 @@ msgstr "Dette er den titel, som brugerne ser, når de vælger en arrangementsska
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Template"
-msgstr ""
+msgstr "Skabelon"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -3741,7 +3741,7 @@ msgstr "Fuldfør transaktion"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
-msgstr ""
+msgstr "Forvalgt rolle-ID"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Status ID"
@@ -3857,13 +3857,13 @@ msgstr "Slet deltagere og arrangementer som du kan redigere"
 
 #: CRM/Event/Info.php
 msgid "manage event profiles"
-msgstr ""
+msgstr "håndtér arrangementprofiler"
 
 #: CRM/Event/Info.php
 msgid ""
 "Allow users to create, edit and copy event-related profile forms used for "
 "online event registration."
-msgstr ""
+msgstr "Giver brugere mulighed for at oprette, redigere og kopiere profilformularer som knytter sig til arrangementer, til brug for onlinetilmelding til arrangementer."
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "How should this change affect others in the series?"
@@ -3931,7 +3931,7 @@ msgstr "Moms i alt"
 msgid ""
 "NOTE: Contacts selected on the search results are not relevant here; all "
 "contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "BEMÆRK: Kontakter som vælges i søgeresultaterne er ikke relevante her; alle kontakter som opfylder det følgende kriterie vil være i gruppen."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Repeating Event"
@@ -3944,7 +3944,7 @@ msgstr "Underordnet"
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Participant Total"
-msgstr ""
+msgstr "Samlet antal deltagere"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid " Amount Before Tax: "
