--- a/po/da_DK/countries.po
+++ b/po/da_DK/countries.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
-# Aputsiaĸ Niels Janussen <aj@isit.gl>, 2013
+# Aputsiaĸ Niels Janussen <aj@isit.gl>, 2013,2016
 # Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
 # Morten Juhl-Johansen Zölde-Fejér <morten@writtenandread.net>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-12 15:08+0000\n"
-"Last-Translator: Morten Juhl-Johansen Zölde-Fejér <morten@writtenandread.net>\n"
+"PO-Revision-Date: 2016-04-12 17:27+0000\n"
+"Last-Translator: Aputsiaĸ Niels Janussen <aj@isit.gl>\n"
 "Language-Team: Danish (http://www.transifex.com/civicrm/civicrm/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1043,7 +1043,7 @@ msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Saint-Barthélemy"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
