po: update po/es_ES/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/contribute.po
+++ b/po/es_ES/contribute.po
@@ -3,12 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Adrian Torralba Roman, 2016
 # ixiam <info@ixiam.com>, 2013
 # ixiam <info@ixiam.com>, 2011
 # Carlos Capote <carloscapote@masticable.org>, 2014
 # cero <videoalertas@gmail.com>, 2011
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # francescbassas <francesc@babu.cat>, 2014
+# Gorehide Tresde <gorehide@gmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013-2014,2016
 # iWi development <iwidevelopment@gmail.com>, 2011-2012
 # ixiam <info@ixiam.com>, 2011
@@ -23,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-18 15:38+0000\n"
-"Last-Translator: Marti <m.prat@ixiam.com>\n"
+"PO-Revision-Date: 2016-04-12 16:32+0000\n"
+"Last-Translator: Gorehide Tresde <gorehide@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -294,7 +296,7 @@ msgstr "Unidad de frecuencia de repetición"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Pay Later Receipt"
-msgstr ""
+msgstr "Pagar el recibo más tarde"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Min Initial Amount"
@@ -336,11 +338,11 @@ msgstr "Texto del recibo"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Honor Block Title"
-msgstr ""
+msgstr "Título del bloque de honor de página de contribución"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Honor Block Text"
-msgstr ""
+msgstr "Texto del bloque de honor de página de contribución"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Start Date"
@@ -352,7 +354,7 @@ msgstr "Fecha de finalización de página de contribución"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Created By"
-msgstr ""
+msgstr "Página de contribución creada por"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Created Date"
@@ -360,15 +362,15 @@ msgstr "Fecha de creación de página de contribución"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Currency"
-msgstr ""
+msgstr "Moneda de página de contribucón"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Campaign ID"
-msgstr ""
+msgstr "ID de campaña de página de contribución"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Contribution Page Shared?"
-msgstr ""
+msgstr "¿Está compartida la página de contribución?"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Product Option"
@@ -380,11 +382,11 @@ msgstr "Fecha de cumplimiento"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution ID"
-msgstr ""
+msgstr "ID de contribuciones recurrentes"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Interval (number of units)"
-msgstr ""
+msgstr "Intervalo (número de unidades)"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Contribute/Form/UpdateSubscription.php
@@ -393,15 +395,15 @@ msgstr "Número de Cuotas"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution Started Date"
-msgstr ""
+msgstr "Fecha de inicio de contribución recurrente"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution Created Date"
-msgstr ""
+msgstr "Fecha de creación de contribución recurrente"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution Modified Date"
-msgstr ""
+msgstr "Fecha de modificación de contribución recurrente"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: templates/CRM/Contribute/Page/ContributionRecur.tpl
@@ -414,15 +416,15 @@ msgstr "Estado de contribución recurrente"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Number of Cycle Day"
-msgstr ""
+msgstr "Número de día del ciclo"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Number of Failures"
-msgstr ""
+msgstr "Número de Fallos"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Retry Failed Attempt Date"
-msgstr ""
+msgstr "Fecha de reintento de contribución fallida"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Send email Receipt?"
@@ -922,7 +924,7 @@ msgstr "Entre una nueva organización"
 
 #: CRM/Contribute/Form/Contribution/OnBehalfOf.php
 msgid "options"
-msgstr ""
+msgstr "Opciones"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Contribution from"
@@ -2223,7 +2225,7 @@ msgstr "Su contribución no se completará hasta que haga clic en el botón <str
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Click here to do this for a different person."
-msgstr ""
+msgstr "Pinche aquí para hacer esto para una persona diferente."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Not %1, or want to do this for a different person"
@@ -2374,7 +2376,7 @@ msgstr "Esta membresía se renovará automáticamente cada %1 %2(s)."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "This membership will be renewed automatically every %1."
-msgstr ""
+msgstr "Esta suscripción se renovará automáticamente cada %1"
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -4304,7 +4306,7 @@ msgstr "Términos "
 
 #: templates/CRM/Contribute/Page/Widget.tpl
 msgid "Logo"
-msgstr ""
+msgstr "Logo"
 
 #: xml/templates/message_templates/contribution_dupalert_html.tpl
 #: xml/templates/message_templates/contribution_dupalert_text.tpl
@@ -4669,7 +4671,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Product.php
 msgid "Product ID"
-msgstr ""
+msgstr "ID Producto"
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid ""
@@ -5481,4 +5483,4 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 msgid "Total Tax"
-msgstr ""
+msgstr "Impuestos Totales"
