po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-11 03:17+0000\n"
+"PO-Revision-Date: 2016-04-13 03:40+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2807,7 +2807,7 @@ msgid ""
 "number, street name, street unit) due to an unrecognized address format. You"
 " can set the address elements manually by clicking 'Edit Address Elements' "
 "next to the Street Address field while in edit mode."
-msgstr "Volledige adressen zijn bewaard. Maar, het bleek niet mogelijk een aantal adressen in de %1 adresblok(ken) op te splitsen in losse elementen (straat, huisnummer, etc.) vanwege een onbekend formaat van gegevens. U kunt de losse elementen handmatig invoeren door te klikken op 'Bewerk adres' naast het veld 'Adres'."
+msgstr "Het adres is opgeslagen - maar het is niet gelukt het adres in %1 adresblok(ken) op te splitsen (in straat, huisnummer en toevoeging). Het adresformaat is niet bekend. U kunt de losse elementen handmatig invoeren door te klikken op 'Bewerk adres' naast het veld 'Adres'."
 
 #: CRM/Contact/Form/Contact.php
 msgid ""
@@ -6560,7 +6560,7 @@ msgstr "Straatnummer Postdirectional"
 
 #: CRM/Core/DAO/Address.php
 msgid "Street Unit"
-msgstr "Straatdeel"
+msgstr "Toevoeging"
 
 #: CRM/Core/DAO/Address.php
 msgid "Supplemental Address 3"
@@ -12964,7 +12964,7 @@ msgid ""
 " and even numbers). For most addresses, this is done for you automatically. "
 "However, you can manually edit these elements, and potentially handle "
 "addresses that are in unusual formats, by clicking 'Edit Address Elements'."
-msgstr "CiviCRM zal proberen een straatadres op te delen in een straatnummer, straatnaam en straatdeel. Hierdoor kunt u gemakkelijker lijsten en rapporten maken door bijvoorbeeld te sorteren op straatnummer. Dit kan meestal automatisch. Als het een straatadres in een afwijkend formaat is, kunt u het handmatig opdelen door te klikken op 'Wijzig delen straatadres'."
+msgstr "CiviCRM zal proberen een adres automatisch te splitsen in een straatnaam, huisnummer, en huisnummertoevoeging. Hierdoor kunt u gemakkelijker lijsten en rapporten maken door bijvoorbeeld te sorteren op huisnummer. Dit kan meestal automatisch. Als het adres een afwijkend formaat heeft, kunt u het handmatig opdelen door te klikken op 'Wijzig delen straatadres'."
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Street Editing"
@@ -13065,7 +13065,7 @@ msgstr "Vink dit vakje aan als u lengtegraden en breedtegraden handmatig wilt to
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Street number, street name, apartment/unit/suite - OR P.O. box."
-msgstr "Straat inclusief huisnummer en huisnummertoevoeging."
+msgstr "Straatnaam, huisnummer en huisnummer-toevoeging."
 
 #: templates/CRM/Contact/Form/Contact.hlp
 #: templates/CRM/Contact/Form/Edit/Address.tpl
@@ -13575,7 +13575,7 @@ msgstr "Telefoon en E-mail"
 
 #: templates/CRM/Contact/Form/OnBehalfOf.tpl
 msgid "Street number, street name, apartment/unit/suite - OR P.O. box"
-msgstr "Straat inclusief huisnummer en huisnummertoevoeging."
+msgstr "Straatnaam, huisnummer en huisnummer-toevoeging."
 
 #: templates/CRM/Contact/Form/Relationship.tpl
 msgid "Current Employee?"
