--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-11 03:18+0000\n"
+"PO-Revision-Date: 2016-04-13 03:42+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -413,7 +413,7 @@ msgstr "Betaling vastleggen?"
 #: CRM/Event/Form/EventFees.php CRM/Event/Form/ManageEvent/Fee.php
 #: CRM/Event/Form/Registration/Register.php
 msgid "Event Fee(s)"
-msgstr "Evenement Tarief (Tarieven)"
+msgstr "Kosten"
 
 #: CRM/Event/Form/EventFees.php
 msgid "Send Confirmation?"
@@ -593,7 +593,7 @@ msgstr "Kies a.u.b. een financieel type."
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Please enter the fee label for the paid event."
-msgstr "Voer a.u.b. een tarieflabel in voor het betaald evenement."
+msgstr "Voer a.u.b. een tarieflabel in voor dit betaalde evenement."
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Please select an appropriate option as default."
