--- a/po/en_GB/admin.po
+++ b/po/en_GB/admin.po
@@ -7,13 +7,14 @@
 # Jean jacques BRODZIAK <inactive+ziako@transifex.com>, 2014
 # Nick Holden <nrh11@le.ac.uk>, 2012
 # Nick Holden <nrh11@le.ac.uk>, 2012
+# paul deauna <waxmigs2902@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-15 15:02+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-04-13 13:13+0000\n"
+"Last-Translator: paul deauna <waxmigs2902@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -472,7 +473,7 @@ msgstr "Enter a valid URL"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment Processor Type"
-msgstr ""
+msgstr "Is this Payment Processor Type active?"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Is this Payment Processor active?"
