--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-11 03:22+0000\n"
+"PO-Revision-Date: 2016-04-14 00:18+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -731,7 +731,7 @@ msgstr "SMS-providers"
 
 msgctxt "menu"
 msgid "New Mass SMS"
-msgstr "Nieuwe bulk-SMS"
+msgstr "Nieuwe massa-SMS"
 
 msgctxt "menu"
 msgid "Badge Layout"
@@ -1433,7 +1433,7 @@ msgstr "Nieuwe SMS"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Find Mass SMS"
-msgstr "Bulk-SMS zoeken"
+msgstr "Massa-SMS zoeken"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
