po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-13 03:40+0000\n"
+"PO-Revision-Date: 2016-04-14 01:06+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2059,7 +2059,7 @@ msgstr "Overlijdensdatum"
 #: CRM/Contact/Form/Search/Criteria.php CRM/Contact/Import/Parser/Contact.php
 #: xml/templates/civicrm_data.tpl
 msgid "Preferred Communication Method"
-msgstr "Voorkeurcommunicatiekanaal"
+msgstr "Voorkeur communicatiemiddel"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Relationship - Active and Current"
@@ -2212,7 +2212,7 @@ msgstr "Niet mee werken"
 #: CRM/Contact/DAO/Contact.php
 #: templates/CRM/Contact/Page/Inline/CommunicationPreferences.tpl
 msgid "No Bulk Emails (User Opt Out)"
-msgstr "Geen Bulk E-mail (Opted-out)"
+msgstr "Geen massa-mail (opt-out)"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Legal Identifier"
@@ -3061,7 +3061,7 @@ msgstr "E-mail Formaat"
 
 #: CRM/Contact/Form/Edit/CommunicationPreferences.php
 msgid "NO BULK EMAILS (User Opt Out)"
-msgstr "Geen bulk mailing (verzoek gebruiker)."
+msgstr "GEEN MASSA-MAIL (opt-out)"
 
 #: CRM/Contact/Form/Edit/CommunicationPreferences.php CRM/Profile/Form.php
 msgid "Custom  %1 is a required field if %1 is of type Customized."
@@ -5527,7 +5527,7 @@ msgstr "Voeg contacten toe aan een evenement"
 
 #: CRM/Contact/Task.php
 msgid "Schedule/Send a Mass Mailing"
-msgstr "Plan/Verstuur een bulk mailing"
+msgstr "Plan/verstuur een massa-mailing"
 
 #: CRM/Contact/Task.php
 msgid "Create a Mass Mailing"
@@ -6906,7 +6906,7 @@ msgstr "In de wacht"
 
 #: CRM/Core/DAO/Email.php
 msgid "Use for Bulk Mail"
-msgstr "Gebruik voor bulk-mailings"
+msgstr "Gebruik voor massa-mails"
 
 #: CRM/Core/DAO/Email.php
 msgid "Hold Date"
@@ -8466,7 +8466,7 @@ msgstr "Niet mee handelen"
 
 #: CRM/Core/SelectValues.php
 msgid "No bulk emails (User Opt Out)"
-msgstr "Geen bulk e-mail (gebruiker Opt Out)"
+msgstr "Geen massa-mail (opt-out)"
 
 #: CRM/Core/SelectValues.php
 msgid "lifetime"
@@ -10656,7 +10656,7 @@ msgstr "Volgende >>"
 
 #: CRM/SMS/Form/Group.php
 msgid "Your Mass SMS has been saved."
-msgstr "Uw bulk SMS is opgeslagen"
+msgstr "Uw massa-SMS is opgeslagen"
 
 #: CRM/SMS/Form/Group.php
 msgid "Select Recipients"
@@ -10712,7 +10712,7 @@ msgstr "Onmiddellijk versturen"
 
 #: CRM/SMS/Form/Schedule.php
 msgid "Submit Mass SMS"
-msgstr "Bulk-SMS versturen"
+msgstr "Massa-SMS versturen"
 
 #: CRM/SMS/Form/Schedule.php
 msgid "Continue Later"
@@ -10722,7 +10722,7 @@ msgstr "Later verder gaan"
 msgid ""
 "Your Mass SMS has been saved. Click the 'Continue' action to resume working "
 "on it."
-msgstr "Uw bulk SMS is opgeslagen. Klik op 'Verder' om hier verder aan te werken."
+msgstr "Uw massa-SMS is opgeslagen. Klik op 'Verder' om hier verder aan te werken."
 
 #: CRM/SMS/Form/Schedule.php
 msgid "Start date cannot be earlier than the current time."
@@ -10918,7 +10918,7 @@ msgstr "CiviCRM-profielvelden"
 
 #: CRM/UF/Form/Field.php
 msgid "Delete Profile Field"
-msgstr "Verwijder profiel veld"
+msgstr "Verwijder profielveld"
 
 #: CRM/UF/Form/Field.php
 msgid "Results Column?"
@@ -12842,7 +12842,7 @@ msgstr "Selecteer de voorkeur in e-mail opmaak van dit contact. Selecteer 'Beide
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Bulk Mailings"
-msgstr "Bulk-mailings"
+msgstr "Massa-mailings"
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid ""
@@ -12865,7 +12865,7 @@ msgid ""
 "want to receive bulk email from your organization (they set it using the "
 "opt-out action from a CiviMail mailing).   Please think before changing it, "
 "as it will override the preference they have set."
-msgstr "Deze optie kan door de contactpersonen zelf geselecteerd worden wanneer zij geen bulk e-mail van uw organisatie wensen te ontvangen (door het selecteren van de -opt-out actie- van een CiviMail mailing).  Als u deze optie wijzigt, negeert u dus de wens  van de gebruiker!"
+msgstr "Deze optie kan door het contact zelf ingeschakeld worden wanneer zij geen massa-mail van uw organisatie wensen te ontvangen (door het gebruiken van de opt-out-optie in een CiviMail-mailing).  Als u deze optie wijzigt, negeert u dus de wens van de gebruiker!"
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Email Hold"
@@ -12905,7 +12905,7 @@ msgstr "Contacten met 'Geen post' zullen worden uitgesloten bij het verzenden va
 msgid ""
 "Contacts with 'Do not SMS' will be excluded from receiving Bulk SMS "
 "messages, and the Send SMS activity will be disabled."
-msgstr "Contacten met 'Geen SMS' zullen worden uitgesloten bij het verzenden van Bulk SMS berichten, de SMS verzenden activiteit wordt voor hen uitgeschakeld. "
+msgstr "Contacten met 'Geen SMS' zullen worden uitgesloten bij het verzenden van massa-SMS-berichten, en de activiteit 'SMS verzenden' is bij hen niet zichtbaar."
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid ""
@@ -13346,7 +13346,7 @@ msgstr "Gepauzeerd?"
 #: templates/CRM/Contact/Form/Edit/Email.tpl
 #: templates/CRM/Contact/Form/Inline/Email.tpl
 msgid "Bulk Mailings?"
-msgstr "Bulk-mailings?"
+msgstr "Massa-mailings?"
 
 #: templates/CRM/Contact/Form/Edit/Email.tpl
 #: templates/CRM/Contact/Form/Edit/IM.tpl
@@ -15585,7 +15585,7 @@ msgstr "Aanhouden - Opt Out"
 
 #: templates/CRM/Contact/Page/Inline/Email.tpl
 msgid "Bulk"
-msgstr "Bulk"
+msgstr "Massa"
 
 #: templates/CRM/Contact/Page/Inline/Email.tpl
 msgid "(signature)"
@@ -17644,7 +17644,7 @@ msgid ""
 "contacts who received those Mass SMS. CiviCRM will eliminate any "
 "duplications so that contacts who are in an Included Group AND were "
 "recipients of an Included Mailing will only be sent one copy of this SMS."
-msgstr "Als u eerder andere bulk SMS verzonden heeft, kunt u bovendien contacten die die SMS ontvangen hebben insluiten (of uitsluiten). CiviCRM laat duplicaten buiten beschouwing zodat contacten die zowel in een ingesloten groep zitten als ontvanger van een ingesloten mailing zijn maar een exemplaar van deze SMS ontvangen."
+msgstr "Als u eerder andere massa-SMS--berichten verzonden hebt, kunt u contacten insluiten (of uitsluiten) die dit eerdere bericht hebben ontvangen. CiviCRM zal automatisch dubbele telefoonnummers verwijderen: contacten die bij een groep horen én het eerdere bericht hebben ontvangen, zullen maar één SMS krijgen."
 
 #: templates/CRM/SMS/Form/Group.hlp
 msgid ""
@@ -17676,7 +17676,7 @@ msgid ""
 "contacts who received those SMS. CiviCRM will eliminate any duplications so "
 "that contacts who are in an Included Group AND were recipients of an "
 "Included Mailing will only be sent one copy of this Mass SMS."
-msgstr "Als u eerder andere bulk SMS verzonden heeft, kunt u bovendien contacten die die SMS ontvangen hebben insluiten (of uitsluiten). CiviCRM laat duplicaten buiten beschouwing zodat contacten die zowel in een ingesloten groep zitten als ontvanger van een ingesloten mailing zijn maar een exemplaar van deze SMS ontvangen."
+msgstr "Als u eerder andere massa-SMS--berichten verzonden hebt, kunt u contacten insluiten (of uitsluiten) die dit eerdere bericht hebben ontvangen. CiviCRM zal automatisch dubbele telefoonnummers verwijderen: contacten die bij een groep horen én het eerdere bericht hebben ontvangen, zullen maar één SMS krijgen."
 
 #: templates/CRM/SMS/Form/Group.hlp
 msgid "Exclude Messages"
@@ -17702,27 +17702,27 @@ msgstr "Weet u zeker dat u deze job wilt uitvoeren?"
 
 #: templates/CRM/SMS/Form/Schedule.hlp
 msgid "Scheduling and Sending Mass SMS"
-msgstr "Inplannen en verzenden bulk SMS"
+msgstr "Inplannen en verzenden massa-SMS"
 
 #: templates/CRM/SMS/Form/Schedule.hlp
 msgid ""
 "You can schedule Mass SMS to be sent starting at a specific date and time, "
 "OR you can request that they be sent as soon as possible by checking "
 "&quot;Send Immediately&quot;."
-msgstr "U kunt het versturen van een bulk SMS inplannen op datum en tijd, OF u kunt aangeven dat dit zo snel als mogelijk moet worden gedaan door &quot;Direct versturen&quot; te selecteren."
+msgstr "U kunt de verzending van een massa-SMS inplannen op een specifieke datum en tijd, OF u kunt aangeven dat de verzending zo snel mogelijk moet beginnen door &quot;Direct versturen&quot; te selecteren."
 
 #: templates/CRM/SMS/Form/Schedule.hlp
 msgid ""
 "Click <strong>Submit Mass SMS/strong> to add this to the Mass SMS mailing "
 "queue. An automated task which runs periodically on your server processes "
 "mailings in the queue, and starts actually sending out your Mass SMS."
-msgstr "Klik op <strong>Verstuur bulk SMS</strong> om deze toe te voegen aan de wachtrij van de te versturen SMS-berichten. Een taak die periodiek gestart wordt zal dan deze berichten gaan versturen."
+msgstr "Klik op <strong>Verstuur massa-SMS</strong> om deze toe te voegen aan de wachtrij van de te versturen SMS-berichten. Een achtergrondtaak die periodiek uitgevoerd wordt zal de berichten dan gaan versturen."
 
 #: templates/CRM/SMS/Form/Schedule.hlp
 msgid ""
 "Click <strong>Continue Later</strong> if you're not ready to schedule or "
 "send this Mass SMS."
-msgstr "Klik op <strong>Later verder gaan</strong> als u nog niet klaar bent om deze bulk SMS te verzenden of in te plannen."
+msgstr "Klik op <strong>Later verder gaan</strong> als u nog niet klaar bent om deze massa-SMS te verzenden of in te plannen."
 
 #: templates/CRM/SMS/Form/Schedule.hlp
 msgid ""
@@ -17737,12 +17737,12 @@ msgid ""
 "You can schedule this Mass SMS to be sent starting at a specific date and "
 "time, OR you can request that it be sent as soon as possible by checking "
 "&quot;Send Immediately&quot;."
-msgstr "U kunt het versturen van een bulk SMS inplannen op datum en tijd, OF u kunt aangeven dat dit zo snel als mogelijk moet worden gedaan door &quot;Direct versturen&quot; te selecteren."
+msgstr "U kunt de verzending van een massa-SMS inplannen op een specifieke datum en tijd, OF u kunt aangeven dat de verzending zo snel mogelijk moet beginnen door &quot;Direct versturen&quot; te selecteren."
 
 #: templates/CRM/SMS/Form/Schedule.tpl
 msgid ""
 "Set a date and time when you want CiviSMS to start sending this Mass SMS."
-msgstr "Bepaal een datum en tijd dat CiviSMS moet beginnen met het verzenden van deze bulk SMS."
+msgstr "Bepaal de datum en tijd dat CiviSMS moet beginnen met het verzenden van deze massa-SMS."
 
 #: templates/CRM/SMS/Form/Schedule.tpl
 msgid "Preview SMS"
@@ -17762,7 +17762,7 @@ msgstr "SMS versturen"
 
 #: templates/CRM/SMS/Form/Upload.hlp
 msgid "Select the SMS provider for this mass message from the dropdown list."
-msgstr "Kies de SMS provider voor deze bulk SMS uit de dropdown lijst."
+msgstr "Kies de SMS-provider voor deze massa-SMS uit de lijst."
 
 #: templates/CRM/SMS/Form/Upload.hlp
 msgid ""
@@ -19245,7 +19245,7 @@ msgstr "Type campagne"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Campaign Status"
-msgstr "Campagne status"
+msgstr "Campagnestatus"
 
 #: xml/templates/civicrm_data.tpl
 msgid "CiviCRM Extensions"
@@ -19401,11 +19401,11 @@ msgstr "Opvolgen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Change Case Type"
-msgstr "Verander dossier type"
+msgstr "Wijziging dossiertype"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Change Case Status"
-msgstr "Verander dossier status"
+msgstr "Wijziging dossierstatus"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Membership Renewal Reminder"
@@ -19417,15 +19417,15 @@ msgstr "Offline herinnering aan vernieuwing lidmaatschap"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Change Case Start Date"
-msgstr "Verander dossier startdatum"
+msgstr "Wijziging startdatum dossier"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Bulk Email"
-msgstr "Bulk mail"
+msgstr "Massa-mail"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Bulk Email Sent."
-msgstr "Verzonden bulk mail"
+msgstr "Massa-mail verzonden."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Assign Case Role"
@@ -19457,11 +19457,11 @@ msgstr "Link dossiers"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Change Case Tags"
-msgstr "Wijzig dossier kenmerken"
+msgstr "Wijziging dossierkenmerken"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Add Client To Case"
-msgstr "Toevoegen Klant aan dossier"
+msgstr "Toevoegen klant aan dossier"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Canvass"
@@ -20094,7 +20094,7 @@ msgstr "Rapport afgewezen mail"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Bounce Report for mailings"
-msgstr "Rapport van afgewezen mail bij bulkmalingen"
+msgstr "Rapport met bounces voor massamails"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Mail Summary Report"
@@ -21078,11 +21078,11 @@ msgstr "Namens organisatie"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Contribution Bulk Entry"
-msgstr "Bijdrage Bulk Invoer"
+msgstr "Bulk-invoer bijdragen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Membership Bulk Entry"
-msgstr "Lidmaatschap Bulk Invoer"
+msgstr "Bulk-invoer lidmaatschappen"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourTwo.php
 msgid "Your Registration Info"
@@ -21432,7 +21432,7 @@ msgstr "Persoonlijke campagne pagina's - notificatie beheerder"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Personal Campaign Pages - Supporter Status Change Notification"
-msgstr "Persoonlijke campagne pagina's - Notificatie status wijziging supporter "
+msgstr "Persoonlijke campagnepagina's - Notificatie statuswijziging supporter "
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Personal Campaign Pages - Supporter Welcome"
