--- a/po/nl_NL/batch.po
+++ b/po/nl_NL/batch.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-11 03:16+0000\n"
+"PO-Revision-Date: 2016-04-14 00:16+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -78,7 +78,7 @@ msgstr "Batch verwijderd"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Profile for bulk data entry is missing."
-msgstr "Profiel voor bulk gegevensinvoer ontbreekt."
+msgstr "Profiel voor bulk-gegevensinvoer ontbreekt."
 
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Data Entry for Contributions"
