po: update po/nl_NL/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/campaign.po
+++ b/po/nl_NL/campaign.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-11 03:19+0000\n"
+"PO-Revision-Date: 2016-04-14 00:32+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -95,7 +95,7 @@ msgstr "Typenummer campagne"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Status ID"
-msgstr "Statusnummer campagne"
+msgstr "Campagnestatus-ID"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign External Identifier"
@@ -1006,7 +1006,7 @@ msgid ""
 "Before we can add your signature, you must validate your email address by "
 "clicking on the activation link in the confirmation e-mail. Sometimes our "
 "confirmation emails get flagged as spam and are moved to your bulk folder."
-msgstr "Voordat we uw handtekening kunnen toevoegen, moet u eerst uw e-mailadres bevestigen. U kunt daarvoor op de activatie link in de e-mail klikken die wij u ter bevestiging hebben gestuurd. Soms belanden deze mails in de Spam of Bulk mappen van uw mailprogramma. "
+msgstr "Voordat we uw handtekening kunnen toevoegen, moet u eerst uw e-mailadres bevestigen. U kunt daarvoor op de activatielink in de e-mail klikken die wij u ter bevestiging hebben gestuurd. Het kan soms voorkomen dat deze e-mail in uw Spam- of Bulk-map belandt."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
@@ -1025,7 +1025,7 @@ msgid ""
 "Before we can add your signature, you must validate your email address by "
 "clicking on the activation link in the confirmation e-mail. Sometimes our "
 "confirmation emails get flagged as spam and are moved to your spam folder."
-msgstr "Voordat we uw handtekening kunnen toevoegen, moet u eerst uw e-mailadres bevestigen. U kunt daarvoor op de activatie link in de e-mail klikken die wij u ter bevestiging hebben gestuurd. Soms belanden deze mails in de Spam of Bulk mappen van uw mailprogramma. "
+msgstr "Voordat we uw handtekening kunnen toevoegen, moet u eerst uw e-mailadres bevestigen. U kunt daarvoor op de activatie link in de e-mail klikken die wij u ter bevestiging hebben gestuurd. Het kan soms voorkomen dat deze e-mail in uw Spam- of Bulk-map belandt."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
