po: update po/nl_NL/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-11 03:13+0000\n"
+"PO-Revision-Date: 2016-04-14 00:27+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -658,14 +658,14 @@ msgstr "Indien aangevinkt, nieuwe contacten die aangemaakt worden na het onderte
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid "Petition Signers Group"
-msgstr "Petitie Ondertekenaars Groep"
+msgstr "Groep petitie-ondertekenaars"
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid ""
 "All contacts that have signed a CiviCampaign petition will be added to this "
 "group. The group will be created if it does not exist (it is required for "
 "email verification)."
-msgstr "Alle contacten die een CiviCampaign petitie hebben ondertekent worden toegevoegd aan deze groep. Deze groep wordt aangemaakt, als de groep nog niet bestaat. (Dit is nodig voor de verificatie per e-mail.)"
+msgstr "Alle contacten die een CiviCampaign-petitie hebben ondertekend, worden toegevoegd aan deze groep. Als de groep nog niet bestaat zal deze worden aangemaakt (omdat deze nodig is voor verificatie per e-mail)."
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Settings - Display Preferences"
@@ -797,7 +797,7 @@ msgstr "Meerdere bulk e-mailadressen voor een contact inschakelen."
 msgid ""
 "CiviMail will deliver a copy of the email to each bulk email listed for the "
 "contact."
-msgstr "CiviMail zal een kopie van de e-mail verzenden naar elk bulk e-mailadres van het contact."
+msgstr "CiviMail zal een kopie van de e-mail verzenden naar elk bulk-emailadres van het contact."
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable global server wide lock for CiviMail"
@@ -2354,7 +2354,7 @@ msgid ""
 "How this mail account will be used. Only one box may be used for bounce "
 "processing. It will also be used as the envelope email when sending mass "
 "mailings."
-msgstr "Hoe wordt dit e-mailaccount gebruikt. Er mag maar een account gebruikt worden voor het opvangen van e-mail bounce. Het wordt ook gebruikt als e-mail envelop bij bulkmailing."
+msgstr "Bepaalt hoe dit e-mailaccount gebruikt zal worden. Er kan slechts één account voor bounceverwerking toegevoegd worden. Bij massamails zal dit account automatisch gebruikt worden als retouradres."
 
 #: templates/CRM/Admin/Form/Mapping.tpl
 msgid "New Tag"
