--- a/po/pt_BR/menu.po
+++ b/po/pt_BR/menu.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Diego Viegas <diego.viegas@dotpro.com.br>, 2012,2014-2015
+# Diego Viegas <diego.viegas@dotpro.com.br>, 2012,2014-2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2011
 # Enrico Nicoletto <enrico.BR@gmx.co.uk>, 2013
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-10 17:35+0000\n"
-"Last-Translator: Ricardo Sá <ricardofgsa@gmail.com>\n"
+"PO-Revision-Date: 2016-04-13 23:52+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -681,7 +681,7 @@ msgstr "Vizualizar Preferências de Datas"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Scheduled Jobs"
-msgstr "Agendar Tarefas"
+msgstr "Tarefas Agendadas"
 
 msgctxt "menu"
 msgid "Scheduled Jobs Log"
