--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-04-11 03:16+0000\n"
+"PO-Revision-Date: 2016-04-14 00:17+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -796,11 +796,11 @@ msgstr "Wil dit contact geen handel?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Opted Out of Bulk Mail"
-msgstr "Geen Bulk Mail"
+msgstr "Geen massa-mail"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Has this contact opted out of bulk mail?"
-msgstr "Wil dit contact geen bulkmail?"
+msgstr "Heeft dit contact aangegeven geen massa-mail te willen ontvangen?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is Deleted"
