--- a/po/nl_NL/pcp.po
+++ b/po/nl_NL/pcp.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-11 03:10+0000\n"
+"PO-Revision-Date: 2016-04-14 00:32+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -160,7 +160,7 @@ msgstr "Persoonlijke campagnepagina ID"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page Status"
-msgstr "Persoonlijke campagnepagina status"
+msgstr "Status persoonlijke campagnepagina"
 
 #: CRM/PCP/DAO/PCP.php xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
