--- a/po/fr_CA/event.po
+++ b/po/fr_CA/event.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-28 04:12+0000\n"
-"Last-Translator: Mathieu B <mathieu@brab.ca>\n"
+"PO-Revision-Date: 2016-04-14 19:29+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3811,7 +3811,7 @@ msgstr "accéder à CiviEvent"
 msgid ""
 "Create events, view all events, and view participant records (for visible "
 "contacts)"
-msgstr "Créez des événements, affichez tous les événements et consultez les enregistrements des participants (pour les contacts visibles)"
+msgstr "Créer des événements, afficher tous les événements et consulter les enregistrements des participants (pour les contacts visibles)"
 
 #: CRM/Event/Info.php
 msgid "edit event participants"
