po: update po/fr_FR/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/install.po
+++ b/po/fr_FR/install.po
@@ -9,6 +9,7 @@
 # Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
+# Guillaume <guillaume@ordi-service.fr>, 2016
 # Mathieu Lutfy <mathieu@bidon.ca>, 2014-2015
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Vincent Hammadache <vhammadache@gmail.com>, 2015
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:24-0500\n"
-"PO-Revision-Date: 2016-02-14 21:24+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-04-15 06:21+0000\n"
+"Last-Translator: Guillaume <guillaume@ordi-service.fr>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,7 +36,7 @@ msgstr "Oups ! Veuillez corriger l'emplacement de votre installation"
 msgid ""
 "Please untar (uncompress) your downloaded copy of CiviCRM in the "
 "<strong>%1</strong> directory below your Drupal root directory."
-msgstr "Veuillez décompresser (untar) la copie de CiviCRM que vous avez téléchargée dans le dossier <strong>%1</strong> à l'intérieur du répertoire principal de Drupal."
+msgstr "Veuillez décompresser (unzip) la copie de CiviCRM que vous avez téléchargée dans le dossier <strong>%1</strong> à l'intérieur du répertoire principal de Drupal."
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
