po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-14 01:06+0000\n"
+"PO-Revision-Date: 2016-04-16 03:32+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -8598,7 +8598,7 @@ msgstr "Automatische e-mail beantwoorder"
 
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "Opt-out Message"
-msgstr "Uitschrijf Bericht"
+msgstr "Bericht bij uitschrijven"
 
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "Subscription Confirmation Request"
@@ -13816,7 +13816,7 @@ msgstr "Wijzig criteria smartgroep voor %1"
 #: templates/CRM/Contact/Form/Search/Builder.tpl
 #: templates/CRM/Contact/Form/Search/Custom/EventDetails.tpl
 msgid "Search Criteria"
-msgstr "Zoek criteria"
+msgstr "Zoekcriteria"
 
 #: templates/CRM/Contact/Form/Search/AdvancedCriteria.tpl
 msgid ""
