po: update po/ko_KR/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ko_KR/drupal-civicrm.po
+++ b/po/ko_KR/drupal-civicrm.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# 플래닛 물방울 <planet@mulbangul.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-03-13 21:28+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/civicrm/language/ko_KR/)\n"
+"PO-Revision-Date: 2016-04-19 00:25+0000\n"
+"Last-Translator: 플래닛 물방울 <planet@mulbangul.com>\n"
+"Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -99,7 +100,7 @@ msgstr ""
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 #: drupal/modules/civicrm_engage/Engage/Report/Form/CallList.php
 msgid "Contact ID"
-msgstr ""
+msgstr "연락처 ID"
 
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_gender.inc
