--- a/po/pot/common-base.pot
+++ b/po/pot/common-base.pot
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
+"POT-Creation-Date: 2016-05-08 17:05-0400\n"
 "Language-Team: CiviCRM Translators <civicrm-translators@lists.civicrm.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3712,18 +3712,6 @@ msgstr ""
 
 #: CRM/Contact/Form/Search/Custom/ActivitySearch.php
 msgid "Scheduled Date"
-msgstr ""
-
-#: CRM/Contact/Form/Search/Custom/ActivitySearch.php
-msgid " "
-msgstr ""
-
-#: CRM/Contact/Form/Search/Custom/ActivitySearch.php
-msgid "  "
-msgstr ""
-
-#: CRM/Contact/Form/Search/Custom/ActivitySearch.php
-msgid "   "
 msgstr ""
 
 #: CRM/Contact/Form/Search/Custom/ActivitySearch.php
@@ -26282,6 +26270,22 @@ msgstr ""
 msgid "Allow users to view/ download their own invoices"
 msgstr ""
 
+#: CRM/Core/Permission.php
+msgid "edit api keys"
+msgstr ""
+
+#: CRM/Core/Permission.php
+msgid "Edit API keys"
+msgstr ""
+
+#: CRM/Core/Permission.php
+msgid "edit own api keys"
+msgstr ""
+
+#: CRM/Core/Permission.php
+msgid "Edit user's own API keys"
+msgstr ""
+
 #: CRM/Core/Resources.php
 msgid "Upcoming"
 msgstr ""
@@ -26433,6 +26437,20 @@ msgstr ""
 
 #: templates/CRM/Activity/Form/ActivityLinks.tpl
 msgid "New Activity"
+msgstr ""
+
+#: templates/CRM/Contact/Form/Merge.tpl
+msgid ""
+"There are %1 user accounts associated with both the original and duplicate "
+"contacts. Ensure that the Drupal User you want to retain is on the right - "
+"if necessary use the 'Flip between original and duplicate contacts.' option "
+"at top to swap the positions of the two records before doing the merge.\n"
+"  The user record associated with the duplicate contact will not be deleted, "
+"but will be un-linked from the associated contact record (which will be "
+"deleted).\n"
+"  You will need to manually delete that user (click on the link to open "
+"Drupal User account in new screen). You may need to give thought to how you "
+"handle any content or contents associated with that user."
 msgstr ""
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
